# CF Popup Plugin CHANGELOG

## 0.4 (in progress)

- Delay timers implemented.  Both for initial page load, and a secondary one in case a user clicks away before the first one displays.
- Changed link clicking to be it's own "show where", so the options are now "enter", "exit", "link_click".  This is instead of having link click be its own special case during enter or exit.
- Removed ability to set the cookie name -- I don't see anybody using it in practice.
- Cleaned up some console.log remnants.

## 0.3

- Don't run on iOS devices, memory crash with them
- preventing premature evaluation of ad content, by sticking it in a data attr
- CSS change to ensure we're above everything

## 0.2.1

- Adding Changelog

## 0.2

- Rewrote plugin to be self-contained with JS library of Colorbox
- Allows for selecting category, post type, or single page IDs for display logic

## 0.1

- Initial release, dependent on client's HTML and JS